@@ -381,3 +381,6 @@
 	'GlassPlayer/<version>'.
 	* Changed the User Agent string of glassplayergui(1) to
 	'GlassPlayerGui/<version>'.
+2019-03-25 Fred Gleason <fredg@paravelsystems.com>
+	* Added support for processing '#EXT-X-STREAM-INF' headers in
+	master HLS playlists.
